--- a/style.css
+++ b/style.css
@@ -7,18 +7,27 @@ html {
 body {
   margin: 0;
   min-height: 100vh;
-
+  background: whitesmoke;
   font-family: Lato, sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-
+.game-container {
+  width: 530px;
+  height: 600px;
+  background: white;
+  border-radius: 5px;
+  box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+}
 
 .header {
   background: dodgerblue;
-
+  /* Can use overflow: hidden on parent instead of adding border-radius */
+  /* border-radius: 5px 5px 0 0; */
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -40,10 +49,28 @@ h2 {
 .far {
   font-size: 50px;
   margin-right: 40px;
-  User-select: none;
+  user-select: none;
 }
 
+#player .far,
+#player .choice {
+  color: dodgerblue;
+  cursor: pointer;
+}
 
+#computer .far,
+#computer .choice {
+  color: rgb(235, 43, 52);
+}
+
+#player .far:last-of-type,
+#computer .far:last-of-type {
+  margin-right: 0;
+}
+
+.selected {
+  color: black !important;
+}
 
 .reset-icon {
   font-size: 30px;
@@ -66,7 +93,7 @@ h2 {
 /* Media Query: Large Smartphone (Vertical) */
 @media screen and (max-width: 600px) {
   .game-container {
-
+    width: 95%;
     height: 580px;
   }
 
